starting complete solution
